tests/ui/const-generics/associated_const_equality/equality_bound_with_infer.stderr
error[E0271]: type mismatch resolving `<() as Foo>::ASSOC<_> == 10`
  --> $DIR/equality_bound_with_infer.rs:18:14
   |
LL |     bar::<_, ()>();
   |              ^^ expected `10`, found `<() as Foo>::ASSOC::<_>`
   |
   = note: expected constant `10`
              found constant `<() as Foo>::ASSOC::<_>`
note: required by a bound in `bar`
  --> $DIR/equality_bound_with_infer.rs:15:29
   |
LL | fn bar<const N: u32, T: Foo<ASSOC<N> = 10>>() {}
   |                             ^^^^^^^^^^^^^ required by this bound in `bar`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
